AUTOMAKE_OPTIONS = foreign
AM_CPPFLAGS = -std=c++11
AM_LDFLAGS = $(shell pkg-config sfml-all --libs)
bin_PROGRAMS = GameCollection
GameCollection_SOURCES = src/Exceptions/FileExceptions.h\
						src/FileIO/FileIO.cpp\
						src/FileIO/FileIO.h\
						src/FileIO/FileIO.o\
						src/Utility/Converter.cpp\
						src/Utility/Converter.h\
						src/Utility/Encryption.cpp\
						src/Utility/Encryption.h\
						src/GameCollection/Collection.cpp\
						src/GameCollection/Collection.h\
						src/GameCollection/GameCollection.cpp\
						src/GameCollection/ICollectionEntry.h\
						src/GameCollection/Menu/MenuEntry.cpp\
						src/GameCollection/Menu/MenuEntry.h\
						src/GameCollection/Tetris/Game.cpp\
						src/GameCollection/Tetris/Game.h\
						src/GameCollection/Tetris/Playfield.cpp\
						src/GameCollection/Tetris/Playfield.h\
						src/GameCollection/Tetris/SettingsMenu.cpp\
						src/GameCollection/Tetris/SettingsMenu.h\
						src/GameCollection/Tetris/TetrisLoader.cpp\
						src/GameCollection/Tetris/TetrisLoader.h\
						src/GameCollection/Tetris/TetrisMenu.cpp\
						src/GameCollection/Tetris/TetrisMenu.h\
						src/GameCollection/Tetris/ScoreScreen.h\
						src/GameCollection/Tetris/ScoreScreen.cpp\
						src/GameCollection/Tetris/TetrisScore.cpp\
						src/GameCollection/Tetris/TetrisScore.h\
						src/GameCollection/Tetris/Tetromino.cpp\
						src/GameCollection/Tetris/Tetromino.h\
						src/GameCollection/Tetris/Typedefs.h\
						src/GameCollection/Snake/Field.cpp\
						src/GameCollection/Snake/Field.h\
						src/GameCollection/Snake/Snake.cpp\
						src/GameCollection/Snake/SnakeGame.cpp\
						src/GameCollection/Snake/SnakeGame.h\
						src/GameCollection/Snake/Snake.h\
						src/GameCollection/Snake/SnakeScore.cpp\
						src/GameCollection/Snake/SnakeScore.h\
						src/GameCollection/Snake/SnakeLoader.h\
						src/GameCollection/Snake/SnakeLoader.cpp

						
						
